# my-agent

./: .env_example  .gitignore  CLAUDE.md  README.md  TODO.md  demo_agent.py  pyproject.toml  req.txt  test_llm.py  todo.md  todo2.txt
.claude/: settings.local.json
.streamlit/: config.toml  credentials.toml
openspec/changes/archive/2025-02-06-improve-gradio-ui/: design.md  proposal.md  tasks.md
openspec/specs/modern-ui/: spec.md
scripts/: ingest.py
src/: config.py  embeddings.py  vector_store.py
src/api/: main.py
src/chains/: citation_parser.py  llm_manager.py  qa_chain.py
src/chunking/: __init__.py  chapter_detector.py  splitter.py
src/loaders/: __init__.py  base.py  docx_loader.py  epub_loader.py  markdown_loader.py  pdf_loader.py  txt_loader.py  web_loader.py
src/retriever/: base.py
src/web/: __init__.py  app.py  streamlit_app.py
src/web/components/: __init__.py  chat.py  config.py  documents.py  state.py
src/web/styles/: custom.css
tests/: README.md  conftest.py  test_chunking.py  test_dynamic_models.py  test_embeddings.py  test_llm.py  test_skip_uploaded.py  test_txt_loader.py  test_vector_store.py  test_webloader.py
tests/test_chains/: test_qa_chain.py
tests/test_loaders/: test_base_loader.py
tests/test_retriever/: test_base.py
