[project]
name = "book-rag"
version = "0.1.0"
description = "Book-focused RAG system with precise citation tracking"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.70",
    "python-dotenv>=1.1.1",
    # RAG 相关
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    # 文档解析
    "pypdf>=5.0.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "trafilatura>=1.12.0",
    "ebooklib>=0.18",  # EPUB 支持
    # Web 框架
    "gradio>=5.0.0",
    # LLM (OpenRouter 使用 OpenAI SDK)
    "openai>=1.12.0",
    "ipykernel>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
